<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoInternetActivity"
    android:background="#FFFDFCFB">

    <ImageView
        android:id="@+id/no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/nointernet_connection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/no_internet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/something_went_wrong"
        android:textStyle="bold"
        android:textColor="#4A4A4A"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:layout_below="@id/no_internet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/no_internet_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alien"
        android:textColor="#929292"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:layout_below="@id/no_internet_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <Button
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle"
        android:text="@string/retry"
        android:textColor="#31B057"
        android:onClick="fetchData"
        android:gravity="center"/>

</RelativeLayout>